include/GASPI.h

  typedef int gaspi_int;
  typedef unsigned long gaspi_timeout_t;
  typedef unsigned short gaspi_rank_t;
  typedef unsigned int gaspi_number_t;
  typedef unsigned char *gaspi_state_vector_t;
  typedef unsigned char gaspi_queue_id_t;
  typedef unsigned long gaspi_size_t;
  typedef unsigned char gaspi_segment_id_t;
  typedef unsigned long gaspi_offset_t;
  typedef float gaspi_time_t;
  typedef unsigned long gaspi_cycles_t;
  typedef unsigned short gaspi_notification_id_t;
  typedef unsigned int gaspi_notification_t;
  typedef unsigned int gaspi_statistic_counter_t;
  typedef char * gaspi_string_t;
  /**
   * Functions return type.
   *
   */
  typedef enum
    {
      GASPI_ERROR = -1,
      GASPI_SUCCESS = 0,
      GASPI_TIMEOUT = 1,
      GASPI_ERR_EMFILE = 2,
      GASPI_ERR_ENV = 3,
      GASPI_ERR_SN_PORT = 4,
      GASPI_ERR_CONFIG = 5,
      GASPI_ERR_NOINIT = 6,
      GASPI_ERR_INITED = 7,
      GASPI_ERR_NULLPTR = 8,
      GASPI_ERR_INV_SEGSIZE = 9,
      GASPI_ERR_INV_SEG = 10,
      GASPI_ERR_INV_GROUP = 11,
      GASPI_ERR_INV_RANK = 12,
      GASPI_ERR_INV_QUEUE = 13,
      GASPI_ERR_INV_LOC_OFF = 14,
      GASPI_ERR_INV_REM_OFF = 15,
      GASPI_ERR_INV_COMMSIZE = 16,
      GASPI_ERR_INV_NOTIF_VAL = 17,
      GASPI_ERR_INV_NOTIF_ID = 18,
      GASPI_ERR_INV_NUM = 19,
      GASPI_ERR_INV_SIZE = 20,
      GASPI_ERR_MANY_SEG = 21,
      GASPI_ERR_MANY_GRP = 22,
      GASPI_QUEUE_FULL = 23,
      GASPI_ERR_UNALIGN_OFF = 24,
      GASPI_ERR_ACTIVE_COLL = 25,
      GASPI_ERR_DEVICE = 26,
      GASPI_ERR_SN = 27,
      GASPI_ERR_MEMALLOC = 28
    } gaspi_return_t;
  /**
   * Network type.
   *
   */
  typedef enum
    {
      GASPI_IB = 0,	  /* Infiniband */
      GASPI_ROCE = 1,	  /* RoCE */
      GASPI_ETHERNET = 2, /* Ethernet (TCP) */
      GASPI_GEMINI = 3,	  /* Cray Gemini (not implemented) */
      GASPI_ARIES = 4	  /* Cray Aries (not implemented) */
    } gaspi_network_t;
  /**
   * Statistical information
   *
   */
  typedef enum
    {
      GASPI_STATISTIC_ARGUMENT_NONE,
      GASPI_STATISTIC_ARGUMENT_RANK
    } gaspi_statistic_argument_t;
  /** Write to different locations and notify that particular rank.
   *
   *
   * @param num The number of elements in the list.
   * @param segment_id_local The list of local segments where data is located.
   * @param offset_local The list of local offsets where data to write is located.
   * @param rank The rank where to write the list and notification.
   * @param segment_id_remote The list of remote segments where to write.
   * @param offset_remote The list of remote offsets where to write.
   * @param size The list of sizes to write.
   * @param segment_id_notification The segment id used for notification.
   * @param notification_id The notification identifier to use.
   * @param notification_value The notification value to send.
   * @param queue The queue where to post the request.
   * @param timeout_ms Timeout in milliseconds (or GASPI_BLOCK/GASPI_TEST).
   *
   * @return GASPI_SUCCESS in case of success, GASPI_QUEUE_FULL if the
   * requested could not be posted because the provided queue is full,
   * GASPI_ERROR in case of error, GASPI_TIMEOUT in case of timeout.
   */
  gaspi_return_t gaspi_write_list_notify (const gaspi_number_t num,
					  gaspi_segment_id_t * const segment_id_local,
					  gaspi_offset_t * const offset_local,
					  const gaspi_rank_t rank,
					  gaspi_segment_id_t * const segment_id_remote,
					  gaspi_offset_t * const offset_remote,
					  gaspi_size_t * const size,
					  const gaspi_segment_id_t segment_id_notification,
					  const gaspi_notification_id_t notification_id,
					  const gaspi_notification_t notification_value,
					  const gaspi_queue_id_t queue,
					  const gaspi_timeout_t timeout_ms);
  /** Read data from a given rank with a notification on the local side.
   *
   *
   * @param segment_id_local The segment identifier where data to be written is located.
   * @param offset_local The offset where the data to be written is located.
   * @param rank The rank where to write and notify.
   * @param segment_id_remote The remote segment identifier where to write the data to.
   * @param offset_remote The remote offset where to write to.
   * @param size The size of the data to write.
   * @param notification_id The notification identifier to use.
   * @param queue The queue where to post the request.
   * @param timeout_ms Timeout in milliseconds (or GASPI_BLOCK/GASPI_TEST).
   *
   * @return GASPI_SUCCESS in case of success, GASPI_QUEUE_FULL if the
   * requested could not be posted because the provided queue is full,
   * GASPI_ERROR in case of error, GASPI_TIMEOUT in case of timeout.
   */
  gaspi_return_t gaspi_read_notify (const gaspi_segment_id_t segment_id_local,
				    const gaspi_offset_t offset_local,
				    const gaspi_rank_t rank,
				    const gaspi_segment_id_t segment_id_remote,
				    const gaspi_offset_t offset_remote,
				    const gaspi_size_t size,
				    const gaspi_notification_id_t notification_id,
				    const gaspi_queue_id_t queue,
				    const gaspi_timeout_t timeout_ms);
  /** Read from different locations on a given rank and notify on local side.
   *
   *
   * @param num The number of elements in the list.
   * @param segment_id_local The list of local segments where data is located.
   * @param offset_local The list of local offsets where data to write is located.
   * @param rank The rank where to write the list and notification.
   * @param segment_id_remote The list of remote segments where to write.
   * @param offset_remote The list of remote offsets where to write.
   * @param size The list of sizes to write.
   * @param segment_id_notification The segment id used for notification.
   * @param notification_id The notification identifier to use.
   * @param queue The queue where to post the request.
   * @param timeout_ms Timeout in milliseconds (or GASPI_BLOCK/GASPI_TEST).
   *
   * @return GASPI_SUCCESS in case of success, GASPI_QUEUE_FULL if the
   * requested could not be posted because the provided queue is full,
   * GASPI_ERROR in case of error, GASPI_TIMEOUT in case of timeout.
   */
  gaspi_return_t gaspi_read_list_notify (const gaspi_number_t num,
					 gaspi_segment_id_t * const segment_id_local,
					 gaspi_offset_t * const offset_local,
					 const gaspi_rank_t rank,
					 gaspi_segment_id_t * const segment_id_remote,
					 gaspi_offset_t * const offset_remote,
					 gaspi_size_t * const size,
					 const gaspi_segment_id_t segment_id_notification,
					 const gaspi_notification_id_t notification_id,
					 const gaspi_queue_id_t queue,
					 const gaspi_timeout_t timeout_ms);
  /** Get the current number of elements on a given queue.
   *
   *
   * @param queue The queue to get the size.
   * @param queue_size Output parameter with the size/elements in the queue.
   *
   * @return GASPI_SUCCESS in case of success, GASPI_ERROR in case of error.
   */
  gaspi_return_t gaspi_queue_size (const gaspi_queue_id_t queue,
				   gaspi_number_t * const queue_size);
  /** Get the number of queue available for communication.
   *
   *
   * @param queue_num Output parameter with the number of queues.
   *
   * @return GASPI_SUCCESS in case of success, GASPI_ERROR in case of error.
   */
  gaspi_return_t gaspi_queue_num (gaspi_number_t * const queue_num);
  /** Get the maximum number of elements that can be posted to a queue
   * (outstanding requests).
   *
   *
   * @param queue_size_max Output parameter with the maximum number of
   * requests that can be posted to a queue.
   *
   * @return GASPI_SUCCESS in case of success, GASPI_ERROR in case of error.
   */
  gaspi_return_t gaspi_queue_size_max (gaspi_number_t * const queue_size_max);
  /** Create a new communication queue.
   *
   *
   *
   * @param queue Output parameter with id of created queue.
   * @param timeout_ms A timeout value in milliseconds.
   *
   * @return GASPI_SUCCESS in case of success, GASPI_ERROR in case of error.
   */
  gaspi_return_t gaspi_queue_create(gaspi_queue_id_t * const queue,
				    const gaspi_timeout_t timeout_ms);
  /** Delete a new communication queue.
   *
   *
   *
   * @param queue The queue ID to delete.
   *
   * @return GASPI_SUCCESS in case of success, GASPI_ERROR in case of error.
   */
  gaspi_return_t gaspi_queue_delete(const gaspi_queue_id_t queue);
  /** Get the minimum size (in bytes) that can be communicated in a
   * single request (write, read, etc.)
   *
   *
   * @param transfer_size_min Output parameter with the minimum size
   * that be transfered.
   *
   * @return GASPI_SUCCESS in case of success, GASPI_ERROR in case of error.
   */
  gaspi_return_t gaspi_transfer_size_min (gaspi_size_t * const transfer_size_min);
  /** Get the maximum size (in bytes) that can be communicated in a
   * single request (read, write, etc.).
   *
   *
   * @param transfer_size_max Output parameter with the maximum transfer size.
   *
   * @return GASPI_SUCCESS in case of success, GASPI_ERROR in case of error.
   */
  gaspi_return_t gaspi_transfer_size_max (gaspi_size_t * const transfer_size_max);
  /** Get the number of available notification ids. Important to note
   * is that the allowed ids are in [ 0, notification_num ) .
   *
   *
   * @param notification_num Output parameter with the number of
   * available notifications ids.
   *
   * @return GASPI_SUCCESS in case of success, GASPI_ERROR in case of error.
   */
  gaspi_return_t gaspi_notification_num (gaspi_number_t * const notification_num);
  /** Get the internal buffer size for gaspi_allreduce_user.
   *
   *
   * @param buf_size Output parameter with the buffer size.
   *
   * @return GASPI_SUCCESS in case of success, GASPI_ERROR in case of error.
   */
  gaspi_return_t gaspi_allreduce_buf_size (gaspi_size_t * const buf_size);
  /** Get the maximum number of elements allowed in gaspi_allreduce.
   *
   *
   * @param elem_max Output parameter with the maximum number of elements.
   *
   * @return GASPI_SUCCESS in case of success, GASPI_ERROR in case of error.
   */
  gaspi_return_t gaspi_allreduce_elem_max (gaspi_number_t * const elem_max);
  /** Get the maximum number of queues that may be used.
   * It is the maximum of initialized queues plus dynamically created queues.
   *
   * @param queue_max Output parameter with maximum number of queues.
   *
   * @return GASPI_SUCCESS in case of success, GASPI_ERROR in case of error.
   */
  gaspi_return_t gaspi_queue_max(gaspi_number_t * const queue_max);
  /** Get the network type.
   *
   *
   * @param network_type Output parameter with the network type.
   *
   * @return GASPI_SUCCESS in case of success, GASPI_ERROR in case of error.
   */
  gaspi_return_t gaspi_network_type (gaspi_network_t * const network_type);
  /** Get the number of cycles (ticks).
   *
   *
   * @param ticks Output parameter with the ticks.
   *
   * @return GASPI_SUCCESS in case of success, GASPI_ERROR in case of error.
   */
  gaspi_return_t gaspi_time_ticks (gaspi_cycles_t * const ticks);
  /** Get elapsed time (in milliseconds).
   *
   *
   * @param wtime Output parameter with the time in milliseconds.
   *
   * @return GASPI_SUCCESS in case of success, GASPI_ERROR in case of error.
   */

  gaspi_return_t gaspi_time_get (gaspi_time_t * const wtime);
  /** Get the state vector.
   *
   *
   * @param state_vector Vector with state of each rank. The vector
   * must be allocated with enough place to hold the state of all ranks.
   *
   * @return GASPI_SUCCESS in case of success, GASPI_ERROR in case of error.
   */
  gaspi_return_t gaspi_state_vec_get (gaspi_state_vector_t state_vector);
  //@}
  /// \name Profiling interface
  //@{
  /** Set the verbosity level.
   *
   *
   * @param _verbosity_level the level of desired verbosity
   *
   * @return GASPI_SUCCESS in case of SUCCESS, GASPI_ERROR in case of error.
   */
  gaspi_return_t gaspi_statistic_verbosity_level(gaspi_number_t _verbosity_level);
  /** Get the maximum number of statistics counters.
   *
   *
   * @param counter_max Output parameter with the maximum number of counters.
   *
   * @return GASPI_SUCCESS in case of SUCCESS, GASPI_ERROR in case of error.
   */
  gaspi_return_t gaspi_statistic_counter_max(gaspi_number_t* counter_max);
  /** Get information about a counter.
   *
   *
   * @param counter the counter.
   * @param counter_argument Output parameter with meaning of the counter.
   * @param counter_name Output parameter with the name of the counter.
   * @param counter_description Output parameter with a more detailed description of the counter.
   * @param verbosity_level Output parameter with the minumum verbosity level to activate the counter.
   *
   * @return GASPI_SUCCESS in case of SUCCESS, GASPI_ERROR in case of error.
   */
  gaspi_return_t
  gaspi_statistic_counter_info( gaspi_statistic_counter_t counter,
				gaspi_statistic_argument_t* counter_argument,
				gaspi_string_t* counter_name,
				gaspi_string_t* counter_description,
				gaspi_number_t* verbosity_level);
  /** Get statistical counter.
   *
   *
   * @param counter the counter to be retrieved.
   * @param argument the argument for the counter.
   * @param value Output paramter with the current value of the counter.
   *
   * @return GASPI_SUCCESS in case of SUCCESS, GASPI_ERROR in case of error.
   */
  gaspi_return_t
  gaspi_statistic_counter_get ( gaspi_statistic_counter_t counter,
				gaspi_number_t argument,
				unsigned long *value);
  /** Reset a counter (set to 0).
   *
   *
   * @param counter The counter to reset.
   *
   * @return GASPI_SUCCESS in case of SUCCESS, GASPI_ERROR in case of error.
   */
  gaspi_return_t
  gaspi_statistic_counter_reset (gaspi_statistic_counter_t counter);