src/GASPI.f90


    interface ! gaspi_write_list_notify
      function gaspi_write_list_notify(num,segment_id_local,offset_local, &
&         rank,segment_id_remote,offset_remote,size,segment_id_notification, &
&         notification_id,notification_value,queue,timeout_ms) &
&         result( res ) bind(C, name="gaspi_write_list_notify")
	import
	integer(gaspi_number_t), value :: num
	type(c_ptr), value :: segment_id_local
	type(c_ptr), value :: offset_local
	integer(gaspi_rank_t), value :: rank
	type(c_ptr), value :: segment_id_remote
	type(c_ptr), value :: offset_remote
	type(c_ptr), value :: size
	integer(gaspi_segment_id_t), value :: segment_id_notification
	integer(gaspi_notification_id_t), value :: notification_id
	integer(gaspi_notification_t), value :: notification_value
	integer(gaspi_queue_id_t), value :: queue
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_return_t) :: res
      end function gaspi_write_list_notify
    end interface

    interface ! gaspi_read_notify
      function gaspi_read_notify(segment_id_local,offset_local,rank, &
&         segment_id_remote,offset_remote, &
&         size,notification_id,queue,timeout_ms) &
&         result( res ) bind(C, name="gaspi_read_notify")
	import
	integer(gaspi_segment_id_t), value :: segment_id_local
	integer(gaspi_offset_t), value :: offset_local
	integer(gaspi_rank_t), value :: rank
	integer(gaspi_segment_id_t), value :: segment_id_remote
	integer(gaspi_offset_t), value :: offset_remote
	integer(gaspi_size_t), value :: size
	integer(gaspi_notification_id_t), value :: notification_id
	integer(gaspi_queue_id_t), value :: queue
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_return_t) :: res
      end function gaspi_read_notify
    end interface

    interface ! gaspi_read_list_notify
      function gaspi_read_list_notify(num,segment_id_local,offset_local, &
&         rank,segment_id_remote,offset_remote,size,segment_id_notification, &
&         notification_id,queue,timeout_ms) &
&         result( res ) bind(C, name="gaspi_read_list_notify")
	import
	integer(gaspi_number_t), value :: num
	type(c_ptr), value :: segment_id_local
	type(c_ptr), value :: offset_local
	integer(gaspi_rank_t), value :: rank
	type(c_ptr), value :: segment_id_remote
	type(c_ptr), value :: offset_remote
	type(c_ptr), value :: size
	integer(gaspi_segment_id_t), value :: segment_id_notification
	integer(gaspi_notification_id_t), value :: notification_id
	integer(gaspi_queue_id_t), value :: queue
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_return_t) :: res
      end function gaspi_read_list_notify
    end interface

    interface ! gaspi_queue_create
      function gaspi_queue_create(queue,timeout_ms) &
&         result( res ) bind(C, name="gaspi_queue_create")
	import
	integer(gaspi_queue_id_t), value :: queue
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_return_t) :: res
      end function gaspi_queue_create
    end interface

    interface ! gaspi_queue_delete
      function gaspi_queue_delete(queue) &
&         result( res ) bind(C, name="gaspi_queue_delete")
	import
	integer(gaspi_queue_id_t), value :: queue
	integer(gaspi_return_t) :: res
      end function gaspi_queue_delete
    end interface

    interface ! gaspi_queue_size
      function gaspi_queue_size(queue,queue_size) &
&         result( res ) bind(C, name="gaspi_queue_size")
	import
	integer(gaspi_queue_id_t), value :: queue
	integer(gaspi_number_t) :: queue_size
	integer(gaspi_return_t) :: res
      end function gaspi_queue_size
    end interface

    interface ! gaspi_queue_num
      function gaspi_queue_num(queue_num) &
&         result( res ) bind(C, name="gaspi_queue_num")
	import
	integer(gaspi_number_t) :: queue_num
	integer(gaspi_return_t) :: res
      end function gaspi_queue_num
    end interface

    interface ! gaspi_queue_size_max
      function gaspi_queue_size_max(queue_size_max) &
&         result( res ) bind(C, name="gaspi_queue_size_max")
	import
	integer(gaspi_number_t) :: queue_size_max
	integer(gaspi_return_t) :: res
      end function gaspi_queue_size_max
    end interface

    interface ! gaspi_transfer_size_min
      function gaspi_transfer_size_min(transfer_size_min) &
&         result( res ) bind(C, name="gaspi_transfer_size_min")
	import
	integer(gaspi_size_t) :: transfer_size_min
	integer(gaspi_return_t) :: res
      end function gaspi_transfer_size_min
    end interface

    interface ! gaspi_transfer_size_max
      function gaspi_transfer_size_max(transfer_size_max) &
&         result( res ) bind(C, name="gaspi_transfer_size_max")
	import
	integer(gaspi_size_t) :: transfer_size_max
	integer(gaspi_return_t) :: res
      end function gaspi_transfer_size_max
    end interface

    interface ! gaspi_notification_num
      function gaspi_notification_num(notification_num) &
&         result( res ) bind(C, name="gaspi_notification_num")
	import
	integer(gaspi_number_t) :: notification_num
	integer(gaspi_return_t) :: res
      end function gaspi_notification_num
    end interface

    interface ! gaspi_allreduce_buf_size
      function gaspi_allreduce_buf_size(buf_size) &
&         result( res ) bind(C, name="gaspi_allreduce_buf_size")
	import
	integer(gaspi_size_t) :: buf_size
	integer(gaspi_return_t) :: res
      end function gaspi_allreduce_buf_size
    end interface

    interface ! gaspi_allreduce_elem_max
      function gaspi_allreduce_elem_max(elem_max) &
&         result( res ) bind(C, name="gaspi_allreduce_elem_max")
	import
	integer(gaspi_number_t) :: elem_max
	integer(gaspi_return_t) :: res
      end function gaspi_allreduce_elem_max
    end interface

    interface ! gaspi_queue_max
      function gaspi_queue_max(queue_max) &
&         result( res ) bind(C, name="gaspi_queue_max")
	import
	integer(gaspi_number_t) :: queue_max
	integer(gaspi_return_t) :: res
      end function gaspi_queue_max
    end interface

    interface ! gaspi_network_type
      function gaspi_network_type(network_type) &
&         result( res ) bind(C, name="gaspi_network_type")
	import
	integer (gaspi_int) :: network_type
	integer(gaspi_return_t) :: res
      end function gaspi_network_type
    end interface

    interface ! gaspi_time_ticks
      function gaspi_time_ticks(ticks) &
&         result( res ) bind(C, name="gaspi_time_ticks")
	import
	integer(gaspi_cycles_t) :: ticks
	integer(gaspi_return_t) :: res
      end function gaspi_time_ticks
    end interface

    interface ! gaspi_time_get
      function gaspi_time_get(wtime) &
&         result( res ) bind(C, name="gaspi_time_get")
	import
	integer(gaspi_time_t) :: wtime
	integer(gaspi_return_t) :: res
      end function gaspi_time_get
    end interface

   interface ! gaspi_state_vec_get
      function gaspi_state_vec_get(state_vector) &
	   &         result( res ) bind(C, name="gaspi_state_vec_get")
	import
	type(c_ptr), value :: state_vector
	integer(gaspi_return_t) :: res
      end function gaspi_state_vec_get
    end interface

    interface ! gaspi_statistic_verbosity_level
      function gaspi_statistic_verbosity_level(verbosity_level_) &
&         result( res ) bind(C, name="gaspi_statistic_verbosity_level")
	import
	integer(gaspi_number_t), value :: verbosity_level_
	integer(gaspi_return_t) :: res
      end function gaspi_statistic_verbosity_level
    end interface

    interface ! gaspi_statistic_counter_max
      function gaspi_statistic_counter_max(counter_max) &
&         result( res ) bind(C, name="gaspi_statistic_counter_max")
	import
	integer(gaspi_statistic_counter_t) :: counter_max
	integer(gaspi_return_t) :: res
      end function gaspi_statistic_counter_max
    end interface

    interface ! gaspi_statistic_counter_info
       function gaspi_statistic_counter_info(counter,counter_argument, &
	    &         counter_name,counter_description,verbosity_level) &
	    &         result( res ) bind(C, name="gaspi_statistic_counter_info")
	 import
	 integer(gaspi_statistic_counter_t), value :: counter
	 integer(gaspi_int) :: counter_argument
	 character(c_char), dimension(*) :: counter_name
	 character(c_char), dimension(*) :: counter_description
	 integer(gaspi_number_t) :: verbosity_level
	 integer(gaspi_return_t) :: res
       end function gaspi_statistic_counter_info
    end interface

    interface ! gaspi_statistic_counter_get
       function gaspi_statistic_counter_get(counter,argument,value_arg) &
	    &         result( res ) bind(C, name="gaspi_statistic_counter_get")
	 import
	 integer(gaspi_statistic_counter_t), value :: counter
	 integer(gaspi_number_t), value :: argument
	integer(gaspi_number_t) :: value_arg
	integer(gaspi_return_t) :: res
      end function gaspi_statistic_counter_get
    end interface

    interface ! gaspi_statistic_counter_reset
       function gaspi_statistic_counter_reset(counter) &
	    &result( res ) bind(C, name="gaspi_statistic_counter_reset")
	 import
	 integer(gaspi_statistic_counter_t), value :: counter
	 integer(gaspi_return_t) :: res
       end function gaspi_statistic_counter_reset
    end interface

  end module GASPI
